--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <ul>
-        <li >
+    <ul class="Header">
+        <li>
             <img src="Images/people.png" alt="">
             <p>People</p>
         </li>
@@ -34,5 +36,28 @@
             <p>Administrator</p>
         </li>
     </ul>
+
+    <ul class="BodyHeader">
+        <li>
+            <p class="yazi">All People</p>
+            <p class="say">96</p>
+        </li>
+        <li>
+            <p class="yazi">New</p>
+            <p class="say">23</p>
+        </li>
+        <li>
+            <p class="yazi">Hot</p>
+            <p class="say">8</p>
+        </li>
+        <li>
+            <p class="yazi">Client</p>
+            <p class="say">18</p>
+        </li>
+        <li>
+            <pre class="ButtonStyle">+ ADD PERSON </pre>
+        </li>
+    </ul>
 </body>
+
 </html>
