--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="checkboxStyle.css">
 </head>
 
 <body>
@@ -58,6 +59,112 @@
             <pre class="ButtonStyle">+ ADD PERSON </pre>
         </li>
     </ul>
+
+
+
+    <table class="tabel">
+        <tr>
+            <th>
+                <label class="container">
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
+            </th>
+
+            <th class="thName"> Name </th>
+
+            <th>Stage</th>
+
+            <th>Last Contact</th>
+
+            <th>Next Task</th>
+
+        </tr>
+
+        <tr>
+            <td>
+                <label class="container">
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
+            </td>
+
+            <td class="tdName">
+                <img src="Images/men.jpg" alt="">
+                <pre>Joao
+Figueiredo  
+                </pre>
+            </td>
+
+            <td class="tdSimple">Lead</td>
+
+            <td class="tdSimple">3 min ago</td>
+
+            <td>
+                <p>
+                    Thank You
+                </p>
+            </td>
+
+        </tr>
+
+
+        <tr>
+            <td>
+                <label class="container">
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
+            </td>
+
+            <td class="tdName">
+                <img src="Images/ronaldo.jpg" alt="">
+                <pre>Cristino
+Ronaldo  
+                </pre>
+            </td>
+
+            <td class="tdSimple">Nurture</td>
+
+            <td class="tdSimple">4 hrs ago</td>
+
+            <td>
+                <p>
+                    Open House
+                </p>
+            </td>
+
+        </tr>
+
+        <tr>
+            <td>
+                <label class="container">
+                    <input type="checkbox" checked="checked">
+                    <span class="checkmark"></span>
+                </label>
+            </td>
+
+            <td class="tdName">
+                <img src="Images/torres.jpg" alt="">
+                <pre>Fernando
+Torres  
+                </pre>
+            </td>
+
+            <td class="tdSimple">Closed</td>
+
+            <td class="tdSimple">Yesterday</td>
+
+            <td>
+                <p>
+                    Open House
+                </p>
+            </td>
+
+        </tr>
+
+
+    </table>
 </body>
 
 </html>
