--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@ Figueiredo
 
             <td class="tdSimple">3 min ago</td>
 
-            <td>
-                <p>
-                    Thank You
-                </p>
+            <td class="TaskTd">
+                <pre style="background-color: #FE8181;">Thank You</pre>
             </td>
 
         </tr>
@@ -128,10 +126,8 @@ Ronaldo
 
             <td class="tdSimple">4 hrs ago</td>
 
-            <td>
-                <p>
-                    Open House
-                </p>
+            <td class="TaskTd">
+                <pre style="background-color: #4BCFA5;">Open House</pre>
             </td>
 
         </tr>
@@ -155,10 +151,9 @@ Torres
 
             <td class="tdSimple">Yesterday</td>
 
-            <td>
-                <p>
-                    Open House
-                </p>
+            <td class="TaskTd">
+                <pre style="background-color: #647B8B;">CLOSED AT
+  04 MAR 2015                </pre>
             </td>
 
         </tr>
